# BdayaTeam

./: README.md  bdayaTeam.code-workspace  compose.yaml  nginx_main.conf  nginx_teamBdaya.conf  nginx_teamBdaya_docker.conf  restart_run-frontend.sh  setup.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  erd_index.html  localhost+1-key.pem  localhost+1.pem  locustfile.py  manage.py  pyproject.toml  utils.py
backend/BdayaTeam/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  api.py  api_schemas.py  apps.py  caches.py  consumers.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
backend/core/docs/: erd.html
backend/core/migrations/: 0001_initial.py  0002_initial.py  0002_pushsubscription.py  0002_remove_member_course.py  0003_alter_attendance_member_delete_member.py  0003_delete_attendance.py  0003_delete_pushsubscription.py  0004_bdayauser_track.py  0004_track_description.py  0005_alter_track_prefix.py  0006_track_image.py  0007_trackcounter.py  0008_alter_track_description_alter_track_image.py  0009_rename_description_track_en_description_and_more.py  0010_alter_bdayauser_phone_number.py
backend/member/: admin.py  api.py  api_schemas.py  apps.py  auth.py  caches.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/member/docs/: erd.html
backend/member/migrations/: 0001_initial.py  0002_allowedtrackfileextention.py  0002_alter_member_code.py  0002_alter_member_name.py  0002_alter_reciviedtask_member.py  0003_member_bonus.py  0003_member_joined_at.py  0004_alter_member_options.py  0004_reciviedtask_recived_at.py  0005_alter_reciviedtask_unique_together_reciviedtaskfile_and_more.py  0005_member_status.py  0006_alter_member_track.py  0007_alter_member_phone_number.py  (+14 more)
backend/notifications/: api.py  api_schemas.py  models.py  tasks.py
backend/organizer/: admin.py  api.py  api_schemas.py  apps.py  caches.py  consumers.py  models.py  routing.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/technical/: admin.py  api.py  api_schemas.py  caches.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend/templates/: register_email.html
(+174 files in other folders)
