[project]
name = "bdayateam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-phonenumber-field[phonenumberslite]>=8.3.0",
    "django-unfold>=0.72.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular[sidecar]>=0.29.0",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "waitress>=3.0.2",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
